[JENKINS-72042] Add permission to manage config files
Add 2 permissions, one to manage global files and one to manage files on
folder level